--- a/src/main/resources/templates/thymeleaf/da_main.html
+++ b/src/main/resources/templates/thymeleaf/da_main.html
@@ -144,6 +144,7 @@
 			<div class="contents max-1500" id="newDeal_title">
 				<div class="cont-title">
 					<h3>지금 거래중인 작품</h3>
+					<a href="#"><button type="button" class="btn_more">더보기</button></a>
 				</div>
 				<div class="swi-box">
 					<div class="swiper mySwiper1">
