--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -7255,6 +7255,29 @@ input{-webkit-appearance:none;-webkit-border-radius:0;}
 
 
 
+.works_info_wrap{margin-top: 30px;}
+.works_info_wrap:after{content: "";display: block;clear: both;}
+.works_info_wrap .works_info_left{width: 100%;display: table-row;}
+.works_info_wrap .works_info_left .contents_box{width: 100%;}
+.works_info_wrap .works_info_left .contents_box .big_img{margin-bottom: 12.5px;width: auto;height: auto;}
+.works_info_wrap .works_info_left .contents_box .big_img img{width: 100%;height: 100%;object-fit: contain;}
+.works_info_wrap .works_info_left .contents_box .small_img img{width: 75px;height: 75px;margin-right: 12.5px;float: left;object-fit: contain;}
+.works_info_wrap .works_info_left .contents_box .small_img img:last-child{margin-right: 0;}
+
+.works_info_wrap .works_info_right{display: table-row;}
+.works_info_wrap .works_info_right .tit_wrap .tit_01{font-size: 4.125rem;font-weight: 500;color: #111111;}
+.works_info_wrap .works_info_right .tit_wrap .tit_02{font-size: 2.875rem;font-weight: 300;color: #111111;}
+.works_info_wrap .works_info_right table{table-layout: fixed;border: 0;border-spacing: 0;border-collapse: collapse;}
+.works_info_wrap .works_info_right .tstyle1{margin-top: 40px;}
+.works_info_wrap .works_info_right .tstyle1 th{font-size: 2.25rem;font-weight: 600;color: #111111;width: 130px;padding-bottom: 12px;text-align: left;}
+.works_info_wrap .works_info_right .tstyle1 td{font-size: 2rem;font-weight: 300;color: #111111;padding-bottom: 12px;text-align: left;}
+.works_info_wrap .works_info_right .btn_worksInfo_wrap{margin-top: 80px;}
+.works_info_wrap .works_info_right .btn_worksInfo_wrap button{width: 100%;font-size: 2.25rem;color: #ffffff;background: #ea655b;padding: 16px 0;}
+
+.works_info_wrap .works_info_right .btn_worksInfo_wrap .btn_list{width: 100%;font-size: 2.25rem;color: #ffffff;background: #969696 url("../img/img_new/ico_list.png") 30% 50% no-repeat;padding: 16px 0 16px 30px;}
+
+
+
 
 
 .fs_2rem{font-size: 2rem !important;}
