--- a/src/main/resources/templates/thymeleaf/da_main.html
+++ b/src/main/resources/templates/thymeleaf/da_main.html
@@ -186,14 +186,15 @@
 				<div class="cont-title ta-t60">
 					<!-- <h3>Dealing Art <span class="ta-no"><br/></span>Insights</h3> -->
 					<h3>매거진9</h3>
+					<a href="#"><button type="button" class="btn_more">더보기</button></a>
 				</div>
 				<div class="cns-div swi-box">
 					<div class="swiper mySwiper2" >
 						<div class="swiper-wrapper" id="mgz9Box"></div>
-						<div class="swiper-pagination swpa-2 pc-no"></div>
+						<!-- <div class="swiper-pagination swpa-2 pc-no"></div> -->
 					</div>
-					<div class="swiper-button-prev InNextSwiper2 sbp ta-no"><span><img src="/resources/img/arr-r.jpg"></span></div>
-					<div class="swiper-button-next InPrevSwiper2 sbn ta-no"><span><img src="/resources/img/arr-l.jpg"></span></div>
+					<div class="swiper-button-next InPrevSwiper2 sbn ta-no"><span><img src="/resources/img/arr-r.jpg"></span></div>
+					<div class="swiper-button-prev InNextSwiper2 sbp ta-no"><span><img src="/resources/img/arr-l.jpg"></span></div>
 				</div>
 			</div>
 			
@@ -215,6 +216,7 @@
 			<div class="contents max-1500">
 				<div class="cont-title ta-t60">
 					<h3>인기 회원</h3>
+					<a href="#"><button type="button" class="btn_more">더보기</button></a>
 				</div>
 				<div class="cns-div swi-box">
 				
@@ -250,6 +252,7 @@
 			<div class="contents max-1500" id="newDeal_title">
 				<div class="cont-title">
 					<h3>전시소개/후기</h3>
+					<a href="#"><button type="button" class="btn_more">더보기</button></a>
 				</div>
 				<div class="swi-box">
 					<div class="swiper mySwiper4">
