--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -437,7 +437,7 @@ top:0;
 }
 
 .cont-title {
-    margin-top: 150px;
+    margin-top: 50px;
     position: relative;
 }
 
@@ -504,8 +504,8 @@ top:0;
 }
 
 .cns-box {
-    /* width: 283px; */
-    height: 100%;
+    width: 1500px;
+    height: 450px;
     border: #ececec 0px solid;
     /* margin-right: 18px; */
 }
@@ -6084,3 +6084,8 @@ position: relative;background-color: #fbfbfb;}
 /* 23.08.03 재현 추가 내용 css */
 .cont-title a button{width: 100px;font-size: 20px;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 6px no-repeat;text-align: left;position: absolute;top: -2px;right: 20px;}
 
+.exhint_review .pic{width: 350px;height: 316px;cursor: pointer;}
+.exhint_review img{width: 100%;height: 100%;}
+.exhint_review .name{display: flex;justify-content: center;margin-top: 20px;}
+.exhint_review .name span{height: 30px;background: #8f8f8f;font-size: 16px;font-weight: 500;color: #ffffff;padding: 3px 8px;border-radius: 5px;display: inline-block;margin: 15px 0 0 10px;}
+.exhint_review .text{font-size: 18px;font-weight: 300;color: #111111;text-align: center;margin-top: 20px;}
